<resources>

    <string name="action_settings">Settings</string>

    <!-- Hint -->
    <string name="example_hint">텍스트를 입력해주세요</string>
    
    <!-- Main Items -->
    <string name="font_size">Font Size</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="letter_spacing">Letter Spacing</string>
    <string name="font_bold">Bold</string>
    <string name="font_medium">Medium</string>
    <string name="font_demilight">Demilight</string>

    <!-- Example Text -->
    <string name="single_line_example">
        Donec pellentesque vulputate vulputate
    </string>
    <string name="multi_line_example">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget metus dui.
        Vivamus et orci commodo, volutpat enim at, scelerisque felis. Mauris quis viverra urna, aliquam commodo odio.
        Pellentesque iaculis, lacus sed dapibus lobortis, velit dui gravida purus, nec sollicitudin lectus eros eu dolor. Suspendisse potenti.
        Etiam porta sed nisl sit amet sagittis. Sed tempus risus a ipsum luctus tincidunt.
    </string>
    <string name="value_example">10</string>

    <!-- Font Paths -->
    <string name="font_path_bold">fonts/NotoSansKR-Bold-Hestia.otf</string>
    <string name="font_path_demi">fonts/NotoSansKR-DemiLight-Hestia.otf</string>
    <string name="font_path_medium">fonts/NotoSansKR-Medium-Hestia.otf</string>

    <!-- Placeholder -->
    <string name="sp_holder">%d sp</string>
    <string name="dp_holder">%d dp</string>
    <string name="px_under_two_holder">%.2f px</string>

    <!-- Messages -->
    <string name="app_finish_msg">한번 더 누르시면 종료됩니다.</string>
    <string name="app_version_low_msg">간격조절은 롤리팝(API LV21) 부터 지원됩니다.</string>

</resources>
